tests/invalid/lexico_simbolo_invalido.flow
// EXPECT: E101
workflow demo {
    start -> paso@uno
    paso -> end
}
